# DTU-02613-PyHPC

./: .gitignore  README.md  pyproject.toml
w10e1/: 1_1.py  1_2.py  1_3.py  1_4.py  1_5.py
w10e2/: 2_1.py
w11e1/: 1_1.sh  1_2.sh  1_3.sh  1_4.sh
w11e2/: 2_1.py  2_2.py  2_3.sh  2_4.sh
w13e1/: 1_1.py  1_1.sh  1_1_summary.txt  1_2.sh  1_2_summary.txt
w13e2/: 2_1.py  2_1.sh  2_2.sh
w1e1/: e1.py
w1e2/: 2_1.sh  2_2.sh  2_3.sh  2_4.sh  2_5.sh  2_6.sh
w2e1/: 1_1.py  1_2.py  1_3.py  1_4.py  1_5.py  1_6.py  1_7.py  1_8.py
w2e2/: 2_1.py  2_2.py  2_3.py  2_4.py
w2e2/2_6/: 2_6.py  2_6.sh
w3e1/: 1_1.py  1_2.sh  1_3.py  1_3.sh  1_4.py  1_4.sh  1_5.py  1_5.sh  2_1.py  2_2.sh  2_3.py  2_3.sh  2_4.py  2_4.sh  2_5.py  2_5.sh
w4e1/: 1_1.py  1_2.py  1_3.py
w4e2/: 2_1.py  2_1.sh  2_2.profile  2_3.profile  2_3.py  2_3.sh  2_4.py  2_4.py.lprof  2_4.sh  2_7.py  2_7.py.lprof  2_7.sh  2_7_speeds.sh  profile_output.lprof
w5e2/: 2_1.sh  2_3.csv  2_3.ipynb  2_3.py  2_3.sh  2_4.py  2_4.sh
w5e3/: 3_1.py  3_2.csv  3_2.ipynb  3_2.py  3_2.sh  3_3.py  mandelbrot.ipynb
w6e1/: 1_1.py  1_1_test.ipynb  1_2.py  1_3.py  1_4.py  1_4.sh  1_4_analysis.ipynb  1_4_one_read.csv  1_4_one_read.py  1_4_one_read.sh  1_5_one_read.csv  1_5_one_read.sh
w7e1/: 1_1.py  1_2.ipynb  1_2.py
w7e2/: 2_1.py  2_2.py
w7e3/: 3_1.py
w7e4/: 4_4.py
w8e1/: 1_1.py  1_2.sh  1_3.py  1_4.py  1_4.sh  1_5.py  1_5.sh
w8e2/: 2_1.py  2_2.py  2_3.py
w8e3/: 3_1.py
w9e1/: 1_1.py  1_2_jit.py  1_2_nojit.py  1_3.py
w9e2/: 2_1.py  2_2.py  2_3.sh  2_4.py
w9e3/: 3_1.py  3_3.py  3_4.py
